Fix padding between nav links on small screen, remove text decoration

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,12 @@ header {
     margin-left: 10px;
 }
 
+.nav-link {
+    padding: 20px 0;
+    font-size: 110%;
+    text-decoration: none;
+}
+
 /* Main  */
 /* Home Section */
 #home { 
